[tool.poetry]
authors = ["Sylvain Lesage <severo@rednegra.net>"]
description = "API to extract rows of 🤗 datasets"
name = "datasets-preview-backend"
version = "0.10.13"

[tool.poetry.dependencies]
Pillow = "^8.3.1"
PyICU = "^2.7.4"
aiohttp = "^3.7.4"
apache-beam = "^2.31.0"
appdirs = "^1.4.4"
conllu = "^4.4"
datasets = { git = "https://github.com/huggingface/datasets.git", extras = [
    "audio",
] }
diskcache = "^5.2.1"
kenlm = { url = "https://github.com/kpu/kenlm/archive/master.zip" }
kss = "^2.5.1"
lm-dataformat = "^0.0.19"
lxml = "^4.6.3"
nlp = "^0.4.0"
nltk = "^3.6.2"
openpyxl = "^3.0.7"
orjson = "^3.6.4"
psutil = "^5.8.0"
py7zr = "^0.16.1"
python = "^3.9.6"
python-dotenv = "^0.19.0"
starlette = "^0.16.0"
tensorflow = "^2.5.0"
transformers = "^4.10.0"
trec-car-tools = { path = "vendors/trec-car-tools/python3" }
typer = "^0.3.2"
types-requests = "^2.25.8"
uvicorn = "^0.14.0"
watchdog = { extras = ["watchmedo"], version = "^2.1.3" }
wget = "^3.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
safety = "^1.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["datasets_preview_backend"]

[tool.isort]
profile = "black"

[tool.black]
experimental-string-processing = true
line-length = 119

[tool.mypy]
exclude = 'vendors'
strict = true

[[tool.mypy.overrides]]
# could be solved in datasets by adding __add__ to the __init__.py file
implicit_reexport = true
module = "datasets"
