[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Documentation for datasets-server"
name = "datasets-server-doc"
version = "0.1.0"

[tool.poetry.dependencies]
#hf-doc-builder = { git = "https://github.com/huggingface/doc-builder.git", rev = "a3c770b97dc447e6b53cb43230ba56009e73b43a", extras = ["quality"] }
hf-doc-builder = { extras = ["quality"], version = "0.3.0" }
python = "3.9.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
