[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Documentation for datasets-server"
name = "datasets-server-doc"
version = "0.1.0"

[tool.poetry.dependencies]
hf-doc-builder = { git = "https://github.com/huggingface/doc-builder" }
python = "3.9.15"
watchdog = "^2.1.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
