[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "End to end tests"
name = "e2e"
version = "0.1.0"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.15"
openapi-spec-validator = "^0.5.5"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
huggingface-hub = "^0.16.4"
mypy = "^1.0.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
requests = "^2.28.2"
ruff = "^0.1.3"
types-requests = "^2.28.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "wip: tests being developed"
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
]
# ^ huggingface_hub is not typed since version 0.13.0
ignore_missing_imports = true

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
