[tool.poetry]
package-mode = false
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "End to end tests"
name = "e2e"
version = "0.1.0"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.18"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
huggingface-hub = {version = "^0.25.1", extras = ["hf-transfer"]}
mypy = "^1.10.0"
pip-audit = "^2.7.3"
pytest = "^8.2.2"
pytest-memray = "^1.6.0"
requests = "^2.32.2"
ruff = "^0"
types-requests = "^2.28.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
]
# ^ huggingface_hub is not typed since version 0.13.0
ignore_missing_imports = true

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
