[tool.poetry]
name = "admin-ui"
version = "0.1.0"
description = "Admin interface for datasets-server"
authors = ["Quentin Lhoest <quentin@huggingface.co>"]

[tool.poetry.dependencies]
python = "3.9.15"
duckdb = "^0.8.1"
gradio = "^3.34.0"
huggingface-hub = "^0.16.4"
libcommon = { path = "../../libs/libcommon", develop=true }
matplotlib = "^3.7.0"
pygraphviz = "~1.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
