[tool.poetry]
name = "admin-ui"
version = "0.1.0"
description = "Admin interface for datasets-server"
authors = ["Quentin Lhoest <quentin@huggingface.co>"]

[tool.poetry.dependencies]
python = "3.9.18"
duckdb = "^0.9.3.dev2934"
gradio = "^3.34.0"
libcommon = { path = "../../libs/libcommon", develop=true }
matplotlib = "^3.7.0"
pygraphviz = "~1.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
