[tool.poetry]
authors = ["Andrea Soria <andrea@huggingface.co>"]
description = "Monitor cache status entries and apply corrections if needed."
name = "cache_maintenance"
version = "0.0.1"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.15"
environs = "^9.5.0"
libcommon = {path = "../../libs/libcommon", develop = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
flake8 = "^3.9.2"
flake8-pep585 = "^0.1.7"
flake8-unused-arguments = "^0.0.13"
isort = "^5.12.0"
mypy = "^1.0.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
types-requests = "^2.31.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["cache_maintenance"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
preview = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
]
# ^ huggingface_hub is not typed since version 0.13.0
ignore_missing_imports = true
