[tool.poetry]
authors = ["Andrea Soria <andrea@huggingface.co>"]
description = "Monitor cache status entries and apply corrections if needed."
name = "cache_maintenance"
version = "0.0.1"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.18"
environs = "^9.5.0"
libcommon = {path = "../../libs/libcommon", develop = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
mypy = "^1.8.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
ruff = "^0"
types-requests = "^2.31.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
]
# ^ huggingface_hub is not typed since version 0.13.0
ignore_missing_imports = true

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
