[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "MongoDB database migration job"
name = "mongodb_migration"
version = "0.0.1"
license = "Apache-2.0"

[tool.poetry.dependencies]
environs = "^9.5.0"
libcommon = {path = "../../libs/libcommon", develop = true}
python = "3.9.15"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
black = "^22.1.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "0.812"
pip-audit = "^2.4.6"
poetryup = "^0.3.8"
pytest = "^7.2.0"
pytest-cov = "^2.12.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["mongodb_migration"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
preview = true

[tool.mypy]
strict = true
