[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "MongoDB database migration job"
name = "mongodb_migration"
version = "0.0.1"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.15"
environs = "^9.5.0"
libcommon = {path = "../../libs/libcommon", develop = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
mypy = "^1.0.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
ruff = "^0.1.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["mongodb_migration"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
