[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Library for the cache in mongodb"
name = "libcache"
version = "0.1.18"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
mongo-types = "0.15.1"
mongoengine = "^0.24.1"
pymongo = { extras = ["srv"], version = "^3.12.3" }
python = "3.9.6"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^22.1.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
libutils = { path = "../../libs/libutils/dist/libutils-0.1.6-py3-none-any.whl", develop = false }
mypy = "0.812"
poetryup = "^0.3.8"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
safety = "^1.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["libcache"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
preview = true

[tool.mypy]
strict = true
