[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Library for utils common to all the services"
name = "libcommon"
version = "0.6.8"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.14.5"
aiohttp = "^3.14.1"
anyio = ">=3.4.0,<5"
appdirs = "^1.4.4"
async-lru = "^2.0.5"
cryptography = "^43.0.1"
datasets = { git = "https://github.com/huggingface/datasets", rev = "030a3e540e8e5cc850c01b0ea3bc0db448255567" }
duckdb = "^1.5.3"
environs = "^14.3.0"
filelock = "^3.18.0"
fsspec = {version = "2024.6.0", extras = ["s3"]}
huggingface-hub = "^1.18.0"
libviewer = { path = "../libviewer", develop = true }
mongo-types = "0.15.1"
mongoengine = "^0.29.1"
networkx = "^3.0"
numpy = "^2.3.3"
orjson = "^3.9.15"
pandas = "^2.2.0"
pdfplumber = ">=0.11.4"
pillow = "^12.2.0"
polars = "1.39.3"
psutil = "^7.1.0"
pyarrow = "^22.0.0"
pydantic = "^2.12.5"
pylance = "^1.0.4"
pymongoarrow = "^1.10.0"
pymupdf = "^1.26.1"
pymongo = { extras = ["srv", "aws"], version = "^4.15.1" }
pytz = "^2020.1"
s3fs = "2024.6.0"  # Aligned with fsspec[s3] version
soundfile = ">=0.12.1"
starlette-prometheus = "^0.9.0"
teich = { git = "https://github.com/lhoestq/teich", rev = "b18cb66dc7fbb2c0d59bee761b236273aeecccc5" }  # to fix traces streaming
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.11.0%2Bcpu-cp314-cp314-manylinux_2_28_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.11.0%2Bcpu-cp314-cp314-manylinux_2_28_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.11.0-cp314-cp314-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.11.0%2Bcpu-cp314-cp314-manylinux_2_28_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'"},
]
torchcodec = [
    { url = "https://download.pytorch.org/whl/cpu/torchcodec-0.14.0%2Bcpu-cp314-cp314-manylinux_2_28_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'"},
    { url = "https://download.pytorch.org/whl/cpu/torchcodec-0.14.0%2Bcpu-cp314-cp314-manylinux_2_28_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torchcodec-0.14.0-cp314-cp314-macosx_14_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torchcodec-0.14.0%2Bcpu-cp314-cp314-manylinux_2_28_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'"},
]
tqdm = "^4.66.3"
tsfile = "^2.3.0"
xxhash = "^3.7.0"

[tool.poetry.group.dev.dependencies]
aiobotocore = "2.13.0"
bandit = "^1.7.4"
boto3 = "1.34.106"
httpx = "^0.26.0"
moto = "^4.2.8"
mypy = "^1.10.0"
pandas-stubs = "^2.2.0"
pip-audit = "^2.7.3"
pytest = "^8.2.2"
pytest-datadir = "^1.5.0"
pytest-memray = "^1.6.0"
ruff = "^0"
types-aiobotocore = {extras = ["signer"], version = "2.13.0"}
types-psutil = "^7.0.0"
types-pytz = "^2022.1.1"
validators = "^0.22.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
cli_all_projects = 'libcommon.scripts:cli_all_projects'

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "real_dataset: tests on the Hub"
]

[tool.mypy]
strict = true
# allow calling untyped methods in huggingface_hub (eg: DatasetInfo(...))
untyped_calls_exclude = "huggingface_hub"

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "fitz.*",
    "networkx.*",
    "prometheus_client.*",
    "pyarrow.*",
    "pymongoarrow.*",
    "tqdm.*",
    "fsspec.*",
    "boto3.*",
    "moto.*",
    "aiobotocore.*",
    "requests.*",
    "dateutil.*",
    "torchcodec.*",
    "duckdb.*",
    "libviewer.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
]
# allow
#   from huggingface_hub.utils import build_hf_headers
# even if the module does not explicitly exports the method
# https://github.com/huggingface/huggingface_hub/blob/07896ee75b37da0d1744c9d03472485b985b3213/src/huggingface_hub/utils/__init__.py
no_implicit_reexport = false

[tool.ruff]
line-length = 119
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "I",  # isort
    # flake8-pep585:
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
]
