[tool.poetry]
authors = ["Sylvain Lesage <sylvain.lesage@huggingface.co>"]
description = "Library for the jobs queue in mongodb"
name = "libqueue"
version = "0.4.8"
license = "Apache-2.0"

[tool.poetry.dependencies]
environs = "^9.5.0"
mongo-types = "0.15.1"
mongoengine = "^0.24.1"
packaging = "^21.3"
psutil = "^5.9.2"
pymongo = { extras = ["srv"], version = "^3.12.3" }
python = "3.9.6"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^22.1.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "0.812"
poetryup = "^0.3.8"
pytest = "^7.2.0"
pytest-cov = "^2.12.1"
safety = "^2.1.1"
types-psutil = "^5.9.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
# addopts = "-k 'wip'"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["libqueue"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
preview = true

[tool.mypy]
strict = true
