[tool.poetry]
authors = ["Krisztián Szűcs <krisztian@huggingface.co>"]
description = "Library for utils common to all the services"
name = "libviewer"
version = "0.1.0"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.12.11"
click = "8.1.8"
pyarrow = "15.0.2"
huggingface-hub = {version = "^0.31.0", extras = ["hf-transfer"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core", "maturin>=1.0,<2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "libviewer"
requires-python = ">=3.9.18"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "click",
    "pyarrow",
    "huggingface_hub"
]

[project.scripts]
dv = "libviewer.cli:cli"

[tool.maturin]
# bindings = "pyo3"
module-name = "libviewer._internal"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]