[tool.poetry]
authors = ["Krisztián Szűcs <krisztian@huggingface.co>"]
description = "Library for utils common to all the services"
name = "libviewer"
version = "0.2.0"
license = "Apache-2.0"

[tool.poetry.scripts]
dv = "libviewer.cli:cli"

[tool.poetry.dependencies]
anyio = ">=3.4.0,<5"
python = "3.12.11"
click = "8.1.8"
pyarrow = "^21.0.0"
huggingface-hub = {version = "^0.31.0", extras = ["hf-transfer"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.14.6"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# bindings = "pyo3"
module-name = "libviewer._internal"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
